precised titles for PADDINGRIGHT

--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
                     <section>
                         <h3>Padding Bottom</h3>
                         <div class="rules-container">
-                            <h4>PADDINGBOTTOM</h4>
+                            <h4>PADDINGBOTTOM1</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
@@ -327,7 +327,7 @@
                                     Salut
                                 </div>
                             </div>
-                            <h4>PADDINGBOTTOM</h4>
+                            <h4>PADDINGBOTTOM2</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
@@ -336,7 +336,7 @@
                                     Salut
                                 </div>
                             </div>
-                            <h4>PADDINGBOTTOM</h4>
+                            <h4>PADDINGBOTTOM3</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
@@ -345,7 +345,7 @@
                                     Salut
                                 </div>
                             </div>
-                            <h4>PADDINGBOTTOM</h4>
+                            <h4>PADDINGBOTTOM4</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
@@ -354,7 +354,7 @@
                                     Salut
                                 </div>
                             </div>
-                            <h4>PADDINGBOTTOM</h4>
+                            <h4>PADDINGBOTTOM5</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
@@ -363,7 +363,7 @@
                                     Salut
                                 </div>
                             </div>
-                            <h4>PADDINGBOTTOM</h4>
+                            <h4>PADDINGBOTTOM10</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
@@ -372,7 +372,7 @@
                                     Salut
                                 </div>
                             </div>
-                            <h4>PADDINGBOTTOM</h4>
+                            <h4>PADDINGBOTTOM15</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
@@ -381,7 +381,7 @@
                                     Salut
                                 </div>
                             </div>
-                            <h4>PADDINGBOTTOM</h4>
+                            <h4>PADDINGBOTTOM20</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
@@ -390,7 +390,7 @@
                                     Salut
                                 </div>
                             </div>
-                            <h4>PADDINGBOTTOM</h4>
+                            <h4>PADDINGBOTTOM25</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
