precised titles for PADDINGBOTTOM

--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
                                     Salut
                                 </div>
                             </div>
-                            <h4>PADDINGBOTTOM</h4>
+                            <h4>PADDINGBOTTOM25</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
