precised titles for PADDINGLEFT

--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
                     <section>
                         <h3>Padding Left</h3>
                         <div class="rules-container">
-                            <h4>PADDINGLEFT</h4>
+                            <h4>PADDINGLEFT1</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
@@ -413,7 +413,7 @@
                                     Salut
                                 </div>
                             </div>
-                            <h4>PADDINGLEFT</h4>
+                            <h4>PADDINGLEFT2</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
@@ -422,7 +422,7 @@
                                     Salut
                                 </div>
                             </div>
-                            <h4>PADDINGLEFT</h4>
+                            <h4>PADDINGLEFT3</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
@@ -431,7 +431,7 @@
                                     Salut
                                 </div>
                             </div>
-                            <h4>PADDINGLEFT</h4>
+                            <h4>PADDINGLEFT4</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
@@ -440,7 +440,7 @@
                                     Salut
                                 </div>
                             </div>
-                            <h4>PADDINGLEFT</h4>
+                            <h4>PADDINGLEFT5</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
@@ -449,7 +449,7 @@
                                     Salut
                                 </div>
                             </div>
-                            <h4>PADDINGLEFT</h4>
+                            <h4>PADDINGLEFT10</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
@@ -458,7 +458,7 @@
                                     Salut
                                 </div>
                             </div>
-                            <h4>PADDINGLEFT</h4>
+                            <h4>PADDINGLEFT15</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
@@ -467,7 +467,7 @@
                                     Salut
                                 </div>
                             </div>
-                            <h4>PADDINGLEFT</h4>
+                            <h4>PADDINGLEFT20</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
@@ -476,7 +476,7 @@
                                     Salut
                                 </div>
                             </div>
-                            <h4>PADDINGLEFT</h4>
+                            <h4>PADDINGLEFT25</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
