precised titles for PADDING

--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@
                     <section>
                         <h3>Padding All</h3>
                         <div class="rules-container">
-                            <h4>PADDING</h4>
+                            <h4>PADDING1</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
@@ -499,7 +499,7 @@
                                     Salut
                                 </div>
                             </div>
-                            <h4>PADDING</h4>
+                            <h4>PADDING2</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
@@ -508,7 +508,7 @@
                                     Salut
                                 </div>
                             </div>
-                            <h4>PADDING</h4>
+                            <h4>PADDING3</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
@@ -517,7 +517,7 @@
                                     Salut
                                 </div>
                             </div>
-                            <h4>PADDING</h4>
+                            <h4>PADDING4</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
@@ -526,7 +526,7 @@
                                     Salut
                                 </div>
                             </div>
-                            <h4>PADDING</h4>
+                            <h4>PADDING5</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
@@ -535,7 +535,7 @@
                                     Salut
                                 </div>
                             </div>
-                            <h4>PADDING</h4>
+                            <h4>PADDING10</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
@@ -544,7 +544,7 @@
                                     Salut
                                 </div>
                             </div>
-                            <h4>PADDING</h4>
+                            <h4>PADDING15</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
@@ -553,7 +553,7 @@
                                     Salut
                                 </div>
                             </div>
-                            <h4>PADDING</h4>
+                            <h4>PADDING20</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
@@ -562,7 +562,7 @@
                                     Salut
                                 </div>
                             </div>
-                            <h4>PADDING</h4>
+                            <h4>PADDING25</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
