precised titles for MARGINTOP

--- a/index.html
+++ b/index.html
@@ -576,7 +576,7 @@
                     <section>
                         <h3>Margin Top</h3>
                         <div class="rules-container">
-                            <h4>MARGINTOP</h4>
+                            <h4>MARGINTOP1</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
@@ -585,7 +585,7 @@
                                     Salut
                                 </div>
                             </div>
-                            <h4>MARGINTOP</h4>
+                            <h4>MARGINTOP2</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
@@ -594,7 +594,7 @@
                                     Salut
                                 </div>
                             </div>
-                            <h4>MARGINTOP</h4>
+                            <h4>MARGINTOP3</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
@@ -603,7 +603,7 @@
                                     Salut
                                 </div>
                             </div>
-                            <h4>MARGINTOP</h4>
+                            <h4>MARGINTOP4</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
@@ -612,7 +612,7 @@
                                     Salut
                                 </div>
                             </div>
-                            <h4>MARGINTOP</h4>
+                            <h4>MARGINTOP5</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
@@ -621,7 +621,7 @@
                                     Salut
                                 </div>
                             </div>
-                            <h4>MARGINTOP</h4>
+                            <h4>MARGINTOP10</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
@@ -630,7 +630,7 @@
                                     Salut
                                 </div>
                             </div>
-                            <h4>MARGINTOP</h4>
+                            <h4>MARGINTOP15</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
@@ -639,7 +639,7 @@
                                     Salut
                                 </div>
                             </div>
-                            <h4>MARGINTOP</h4>
+                            <h4>MARGINTOP20</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
@@ -648,7 +648,7 @@
                                     Salut
                                 </div>
                             </div>
-                            <h4>MARGINTOP</h4>
+                            <h4>MARGINTOP25</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
