precised titles for MARGINRIGHT

--- a/index.html
+++ b/index.html
@@ -662,7 +662,7 @@
                     <section>
                         <h3>Margin Right</h3>
                         <div class="rules-container">
-                            <h4>MARGINRIGHT</h4>
+                            <h4>MARGINRIGHT1</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
@@ -671,7 +671,7 @@
                                     Salut
                                 </div>
                             </div>
-                            <h4>MARGINRIGHT</h4>
+                            <h4>MARGINRIGHT2</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
@@ -680,7 +680,7 @@
                                     Salut
                                 </div>
                             </div>
-                            <h4>MARGINRIGHT</h4>
+                            <h4>MARGINRIGHT3</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
@@ -689,7 +689,7 @@
                                     Salut
                                 </div>
                             </div>
-                            <h4>MARGINRIGHT</h4>
+                            <h4>MARGINRIGHT4</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
@@ -698,7 +698,7 @@
                                     Salut
                                 </div>
                             </div>
-                            <h4>MARGINRIGHT</h4>
+                            <h4>MARGINRIGHT5</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
@@ -707,7 +707,7 @@
                                     Salut
                                 </div>
                             </div>
-                            <h4>MARGINRIGHT</h4>
+                            <h4>MARGINRIGHT10</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
@@ -716,7 +716,7 @@
                                     Salut
                                 </div>
                             </div>
-                            <h4>MARGINRIGHT</h4>
+                            <h4>MARGINRIGHT15</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
@@ -725,7 +725,7 @@
                                     Salut
                                 </div>
                             </div>
-                            <h4>MARGINRIGHT</h4>
+                            <h4>MARGINRIGHT20</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
@@ -734,7 +734,7 @@
                                     Salut
                                 </div>
                             </div>
-                            <h4>MARGINRIGHT</h4>
+                            <h4>MARGINRIGHT25</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
