precised titles for MARGINBOTTOM

--- a/index.html
+++ b/index.html
@@ -748,7 +748,7 @@
                     <section>
                         <h3>Margin Bottom</h3>
                         <div class="rules-container">
-                            <h4>MARGINBOTTOM</h4>
+                            <h4>MARGINBOTTOM1</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
@@ -757,7 +757,7 @@
                                     Salut
                                 </div>
                             </div>
-                            <h4>MARGINBOTTOM</h4>
+                            <h4>MARGINBOTTOM2</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
@@ -766,7 +766,7 @@
                                     Salut
                                 </div>
                             </div>
-                            <h4>MARGINBOTTOM</h4>
+                            <h4>MARGINBOTTOM3</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
@@ -775,7 +775,7 @@
                                     Salut
                                 </div>
                             </div>
-                            <h4>MARGINBOTTOM</h4>
+                            <h4>MARGINBOTTOM4</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
@@ -784,7 +784,7 @@
                                     Salut
                                 </div>
                             </div>
-                            <h4>MARGINBOTTOM</h4>
+                            <h4>MARGINBOTTOM5</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
@@ -793,7 +793,7 @@
                                     Salut
                                 </div>
                             </div>
-                            <h4>MARGINBOTTOM</h4>
+                            <h4>MARGINBOTTOM10</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
@@ -802,7 +802,7 @@
                                     Salut
                                 </div>
                             </div>
-                            <h4>MARGINBOTTOM</h4>
+                            <h4>MARGINBOTTOM15</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
@@ -811,7 +811,7 @@
                                     Salut
                                 </div>
                             </div>
-                            <h4>MARGINBOTTOM</h4>
+                            <h4>MARGINBOTTOM20</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
@@ -820,7 +820,7 @@
                                     Salut
                                 </div>
                             </div>
-                            <h4>MARGINBOTTOM</h4>
+                            <h4>MARGINBOTTOM25</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
