precised titles for MARGINLEFT

--- a/index.html
+++ b/index.html
@@ -834,7 +834,7 @@
                     <section>
                         <h3>Margin Left</h3>
                         <div class="rules-container">
-                            <h4>MARGINLEFT</h4>
+                            <h4>MARGINLEFT1</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
@@ -843,7 +843,7 @@
                                     Salut
                                 </div>
                             </div>
-                            <h4>MARGINLEFT</h4>
+                            <h4>MARGINLEFT2</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
@@ -852,7 +852,7 @@
                                     Salut
                                 </div>
                             </div>
-                            <h4>MARGINLEFT</h4>
+                            <h4>MARGINLEFT3</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
@@ -861,7 +861,7 @@
                                     Salut
                                 </div>
                             </div>
-                            <h4>MARGINLEFT</h4>
+                            <h4>MARGINLEFT4</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
@@ -870,7 +870,7 @@
                                     Salut
                                 </div>
                             </div>
-                            <h4>MARGINLEFT</h4>
+                            <h4>MARGINLEFT5</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
@@ -879,7 +879,7 @@
                                     Salut
                                 </div>
                             </div>
-                            <h4>MARGINLEFT</h4>
+                            <h4>MARGINLEFT10</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
@@ -888,7 +888,7 @@
                                     Salut
                                 </div>
                             </div>
-                            <h4>MARGINLEFT</h4>
+                            <h4>MARGINLEFT15</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
@@ -897,7 +897,7 @@
                                     Salut
                                 </div>
                             </div>
-                            <h4>MARGINLEFT</h4>
+                            <h4>MARGINLEFT20</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
@@ -906,7 +906,7 @@
                                     Salut
                                 </div>
                             </div>
-                            <h4>MARGINLEFT</h4>
+                            <h4>MARGINLEFT25</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
