precised titles for MARGIN

--- a/index.html
+++ b/index.html
@@ -920,7 +920,7 @@
                     <section>
                         <h3>Margin All</h3>
                         <div class="rules-container">
-                            <h4>MARGIN</h4>
+                            <h4>MARGIN1</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
@@ -929,7 +929,7 @@
                                     Salut
                                 </div>
                             </div>
-                            <h4>MARGIN</h4>
+                            <h4>MARGIN2</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
@@ -938,7 +938,7 @@
                                     Salut
                                 </div>
                             </div>
-                            <h4>MARGIN</h4>
+                            <h4>MARGIN3</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
@@ -947,7 +947,7 @@
                                     Salut
                                 </div>
                             </div>
-                            <h4>MARGIN</h4>
+                            <h4>MARGIN4</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
@@ -956,7 +956,7 @@
                                     Salut
                                 </div>
                             </div>
-                            <h4>MARGIN</h4>
+                            <h4>MARGIN5</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
@@ -965,7 +965,7 @@
                                     Salut
                                 </div>
                             </div>
-                            <h4>MARGIN</h4>
+                            <h4>MARGIN10</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
@@ -974,7 +974,7 @@
                                     Salut
                                 </div>
                             </div>
-                            <h4>MARGIN</h4>
+                            <h4>MARGIN15</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
@@ -983,7 +983,7 @@
                                     Salut
                                 </div>
                             </div>
-                            <h4>MARGIN</h4>
+                            <h4>MARGIN20</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
@@ -992,7 +992,7 @@
                                     Salut
                                 </div>
                             </div>
-                            <h4>MARGIN</h4>
+                            <h4>MARGIN25</h4>
                             <div class="rule-container">
                                 <div style="background-color:red">
                                     Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
